--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,25 +19,31 @@
         width: 115px;
     }
 }
+
 .form {
     &__input {
         padding: 10px 20px;
+
         &:focus {
             outline: 2px solid #bbb;
         }
+
         &:not(:first-child) {
             margin: 30px 0;
         }
     }
 }
+
 .authorization-block {
 
     &__google-input {
         margin-bottom: 20px;
     }
+
     & div {
         margin: 40px 0;
     }
+
     &__text {
         text-align: center;
         color: #AAAAAA;
@@ -77,6 +83,43 @@
             color: #1e7ae4dc;
         }
     }
+
+}
+
+
+
+.plus {
+    display: block;
+    position: absolute;
+    width: 11px;
+    height: 1.5px;
+    top: 50%;
+    right: 3%;
+    transition: all 0.2s ease;
+    cursor: pointer;
+
+    &:after {
+        display: block;
+        content: '';
+        background: #777;
+        width: 100%;
+        height: 1.5px;
+        transform: translateY(-100%);
+    }
+
+    &::before {
+        display: block;
+        content: '';
+        background: #777;
+        width: 100%;
+        height: 1.5px;
+        transform: rotate(90deg);
+    }
+
+}
+
+.open {
+    transform: rotate(45deg);
 
 }
 
