--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,12 +36,10 @@
 
 .authorization-block {
 
-    &__google-input {
-        margin-bottom: 20px;
-    }
+    &__google-input {}
 
     & div {
-        margin: 40px 0;
+        margin: 20px 0;
     }
 
     &__text {
