--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,7 +58,7 @@
         color: white;
         height: 50px;
         font-weight: 600;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         transition: all 0.2s ease;
         cursor: pointer;
 
@@ -80,6 +80,12 @@
         &:hover {
             color: #1e7ae4dc;
         }
+    }
+
+    &__errorLogin {
+        color: red;
+        text-align: center;
+        margin-top: 0px;
     }
 
 }
