--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -92,6 +92,40 @@
 
 
 
+.plus {
+    display: block;
+    position: absolute;
+    width: 11px;
+    height: 1.5px;
+    top: 50%;
+    right: 3%;
+    transition: all 0.2s ease;
+    cursor: pointer;
+
+    &:after {
+        display: block;
+        content: '';
+        background: #777;
+        width: 100%;
+        height: 1.5px;
+        transform: translateY(-100%);
+    }
+
+    &::before {
+        display: block;
+        content: '';
+        background: #777;
+        width: 100%;
+        height: 1.5px;
+        transform: rotate(90deg);
+    }
+
+}
+
+.open {
+    transform: rotate(45deg);
+
+}
 
 
 input {
